<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".flashcards.FlashCardSetActivity">

    <item
        android:id="@+id/menu_btn_add_flash_card"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_btn_edit_flash_card"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_btn_search_flash_card"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="3"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_btn_delete_flash_card"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="4"
        android:title="@string/delete"
        app:showAsAction="always" />


</menu>