<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.rafhaanshah.studyassistant.schedule.ScheduleEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.Toolbar"
        app:title="@string/edit_event" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_marginStart="5dp"
                android:labelFor="@id/et_title"
                android:text="@string/title"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_text_format_black_24dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapWords"
                android:maxLength="40"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/event_type"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/image_view_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:backgroundTint="@android:color/black"
                    android:contentDescription="@string/content_description_event_type" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/event_types"
                    android:focusable="false" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/pick_date_time"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:cursorVisible="false"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                android:inputType="datetime"
                android:minWidth="200dp"
                android:onClick="pickDate" />

            <EditText
                android:id="@+id/et_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:cursorVisible="false"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/time"
                android:inputType="datetime"
                android:minWidth="200dp"
                android:onClick="pickTime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/event_status"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_complete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/additional_notes"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/notes"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="250"
                android:padding="10dp"
                android:scrollbars="vertical" />

            <RelativeLayout
                android:id="@+id/reminder_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_notification_date_time_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/notification_switch"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_notification_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_notification_date_time_hint"
                    android:backgroundTint="@color/colorAccent"
                    android:cursorVisible="false"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_date_range_black_24dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/notification_date"
                    android:inputType="datetime"
                    android:minWidth="200dp"
                    android:onClick="pickDate" />

                <EditText
                    android:id="@+id/et_notification_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_notification_date"
                    android:backgroundTint="@color/colorAccent"
                    android:cursorVisible="false"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_access_time_black_24dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/notification_time"
                    android:inputType="datetime"
                    android:minWidth="200dp"
                    android:onClick="pickTime" />

                <Switch
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/tv_notification_date_time_hint" />

                <ImageView
                    android:id="@+id/image_view_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/switch_notification"
                    android:contentDescription="@string/content_description_reminder"
                    android:src="@drawable/ic_notifications_black_24dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_delete_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/materialRed"
                android:onClick="deleteEvent"
                android:text="@string/delete"
                android:textColor="@color/textWhite" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
