<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.rafhaanshah.studyassistant.schedule.ScheduleItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.Toolbar"
        app:title="@string/edit_event" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/title"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:paddingTop="10dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:hint="@string/date"
                    android:onClick="deleteEvent" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:hint="@string/time" />

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:onClick="pickDate"
                    android:text="@string/pick_date" />

                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:onClick="pickTime"
                    android:text="@string/pick_time" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_complete" />

            <EditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/additional_notes"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="250"
                android:paddingTop="20dp" />

            <Button
                android:id="@+id/btn_delete_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="deleteEvent"
                android:text="@string/delete" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
