<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhiteTransparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryTransparent"
        android:elevation="4dp"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/menu_schedule"
            android:textColor="@color/textWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_btn_new"
            android:scaleType="fitXY"
            android:src="@drawable/ic_add_white_24dp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_view_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv_widget_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_widget"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>